# textual-slidecontainer

./: CHANGELOG.md  Changelog.md  README.md  ci-requirements.txt  justfile  pyproject.toml
.github/scripts/: release.sh  tag_release.py
.github/workflows/: add-to-project.yml  ci-checks.yml  release-psv.yml  release.yml  update-docs.yml
src/textual_slidecontainer/: __init__.py  demo.py
